replaced old study guide card background with correct image

--- a/Assets/style.css
+++ b/Assets/style.css
@@ -290,7 +290,7 @@ footer {
 }
 
 #study-guide {
-    background-image: url(./images/cheatsheet.png);
+    background-image: url(./images/studyguide.png);
 }
 
 #cheat-sheet {
