--- a/Assets/style.css
+++ b/Assets/style.css
@@ -1,4 +1,4 @@
-
+/* color variables */
 :root {
     --clr1: rgb(161, 223, 223);
     --clr2: rgb(45, 53, 61);
@@ -6,25 +6,30 @@
     --clr4: rgb(255, 253, 238);
 } 
 
+/* universal element selector */
 * {
     margin: 0;
     padding: 0;
     transition: ease .5s;
 }
 
+/* body element selector */
 body {
     font-family: sans-serif;
 }
 
+/* element selector for links within navbar */
 nav a {
     text-decoration: none;
     color: var(--clr1);
 }
 
+/* hover effect for links with navbar */
 nav a:hover{
     color: var(--clr4);
 }
 
+/* header element selector */
 header {
     background-color: var(--clr2);
     display: flex;
@@ -33,25 +38,25 @@ header {
     padding: 10px 10px 10px 0;
 }
 
+/* navbar element selector */
 nav{
     display: flex;
     color: var(--clr2);
 }
 
-nav:hover{
-    color: var(--clr4);
-}
-
+/* main section element selector */
 main {
     background-color: var(--clr4);
 }
 
+/* footer element selector */
 footer {
     display: flex;
     background-color: var(--clr2);
     padding: 40px 20px;
 }
 
+/* banner within header */
 .header-banner {
     background-color: var(--clr1);
     color: var(--clr2);
@@ -60,6 +65,7 @@ footer {
     padding-right: 5px;
 }
 
+/* banners within tiles */
 .banner {
     background-color: var(--clr1);
     color: var(--clr2);
@@ -73,6 +79,7 @@ footer {
     flex-wrap: wrap;
 }
 
+/* links within banners */
 .banner a{
     text-decoration: none;
     color: var(--clr2);
@@ -80,11 +87,13 @@ footer {
     transition: .25s;
 }
 
+/* hover effect for links in banners */
 .banner a:hover{
     color: #ff864e;
     font-size: 30px;
 }
 
+/* section title and divider line container */
 .side-bar {
     display: flex;
     height: auto;
@@ -92,6 +101,7 @@ footer {
     width: 25%;
 }
 
+/* section title */
 .side-bar-title {
     font-size: 30px;
     font-weight: 600;
@@ -99,19 +109,21 @@ footer {
     color: var(--clr3)
 }
 
+/* divider line between sidebar title and content to the right */
 .divider-line {
     height: auto;
     width: 2px;
     background-color: var(--clr3);
 }
 
-
+/* container for entire about me section */
 .about-section{
     display: flex;
     width: 100%;
     padding-bottom: 30px;
 }
 
+/* paragraph section in about me section */
 .about-content{
     display: flex;
     width: calc(75% - 40px);
@@ -119,6 +131,7 @@ footer {
     padding: 30px;
 }
 
+/* container for entire contact section */
 .contact-section {
     margin-top: 30px;
     padding-bottom: 30px;
@@ -126,6 +139,7 @@ footer {
     width: 100%;
 }
 
+/* container for contact section list */
 .contact-section ul{
     display: flex;
     width: calc(75% + 20px);
@@ -134,6 +148,7 @@ footer {
     align-items: center;
 }
 
+/* styling for contact section list items */
 .contact-section li {
     display: flex;
     border-bottom: solid var(--clr3);
@@ -141,11 +156,13 @@ footer {
     padding: 0 5px;
 }
 
+/* container for entire work section */
 .work-section {
     display: flex;
     width: 100%;
 }
 
+/* container for tiles in work section */
 .cards {
     display: flex;
     flex-wrap: wrap;
@@ -154,11 +171,7 @@ footer {
     padding: 0px 10px 0px 10px;
 }
 
-
-.card:hover,.card1:hover{
-    background-color: rgba(0,0,255,.5);
-}
-
+/* large tile in work section */
 .card1 {
     display: flex;
     position: relative;
@@ -168,6 +181,7 @@ footer {
     border: solid 5px var(--clr1);
 }
 
+/* small tile in work section */
 .card {
     display: flex;
     position: relative;
@@ -177,7 +191,7 @@ footer {
     border: solid 5px var(--clr1);
 }
 
-
+/* banner for hero */
 .banner-hero {
     font-size: 30px;
     background-color: var(--clr1);
@@ -190,6 +204,7 @@ footer {
     right: 30px;
 }
 
+/* background picture for hero */
 .bkgr-picture {
     width: 100%;
     height: 100%;
@@ -197,6 +212,7 @@ footer {
     overflow: hidden;
 }
 
+/* webpage hero container */
 .hero {
     display: flex;
     height: 300px;
@@ -205,6 +221,7 @@ footer {
     margin-bottom: 40px;
 }
 
+/* container for links in navbar */
 .links {
     display: flex;
     justify-content: space-around;
@@ -212,6 +229,7 @@ footer {
     padding: 10px;
 }
 
+/* styling for items inside links class */
 .links > li {
     padding: 0 5px;
     margin: 0 8px;
@@ -219,10 +237,12 @@ footer {
     list-style: none;
 }
 
+/* hover effect for links in navbar */
 .links > li:hover {
     border-bottom: solid var(--clr4);
 }
 
+/* side note in footer next to shapes container */
 .note{
     display: flex;
     justify-content: space-around;
@@ -231,12 +251,14 @@ footer {
     width: calc(25% - 5px);
 }
 
+/* container for shapes in footer */
 .shapes{
     display: flex;
     justify-content: space-around;
     width: calc(75% - 7px);
 }
 
+/* square that turns into a circle */
 .circlesquare{
     display: flex;
     height: 40px;
@@ -245,12 +267,14 @@ footer {
     transition: ease 1s;
 }
 
+/* hover effect for circlesquare class */
 .circlesquare:hover{
     transform: rotate(3600deg);
     border-radius: 20px;
     background-color: aqua;
 }
 
+/* square with various on-hover effects */
 .crazy{
     height: 40px;
     width: 40px;
@@ -261,6 +285,7 @@ footer {
     box-shadow: 0 white;
 }
 
+/* hover effect for crazy class */
 .crazy:hover{
     background-color: purple;
     border: solid greenyellow 5px;
@@ -270,6 +295,7 @@ footer {
     transform: skew(15deg);
 }
 
+/* circle that turns into square */
 .squarecircle{
     display: flex;
     height: 40px;
@@ -279,36 +305,40 @@ footer {
     border-radius: 20px;
 }
 
+/* hover effect for squarecircle class */
 .squarecircle:hover{
     transform: rotate(-3600deg);
     border-radius: 0;
     background-color: #ff4e50;
 }
 
+/* special divider line for footer */
 #footer-line {
     background-color: var(--clr1);
 }
 
-#study-guide {
-    background-image: url(./images/studyguide.png);
-}
+/* background images for cards */
+    #study-guide {
+        background-image: url(./images/studyguide.png);
+    }
 
-#cheat-sheet {
-    background-image: url(./images/cheatsheet.png);
-}
+    #cheat-sheet {
+        background-image: url(./images/cheatsheet.png);
+    }
 
-#firstproject {
-    background-image: url(./images/firstproject.png);
-}
+    #firstproject {
+        background-image: url(./images/firstproject.png);
+    }
 
-#flexbox {
-    background-image: url(./images/flexdemo.png);
-}
+    #flexbox {
+        background-image: url(./images/flexdemo.png);
+    }
 
-#javascript {
-    background-image: url(./images/javascript.png);
-}
+    #javascript {
+        background-image: url(./images/javascript.png);
+    }
 
+/* tablet adjustments */
 @media only screen and (max-width : 768px) {
     .card1 {
         height: 150px;
@@ -338,6 +368,7 @@ footer {
     }
 }
 
+/* mobile adjustments */
 @media only screen and (max-width : 480px) {
     .card1 {
         height: 100px;
