--- a/Assets/style.css
+++ b/Assets/style.css
@@ -331,7 +331,7 @@ footer {
     }
 
     #flexbox {
-        background-image: url(./images/flexdemo.png);
+        background-color: purple;
     }
 
     #javascript {
